--- a/Data/READMEs/RM_randomForest.html
+++ b/Data/READMEs/RM_randomForest.html
@@ -420,125 +420,141 @@ summary {
 <caption>training data performance</caption>
 <thead>
 <tr class="header">
-<th align="left">Method</th>
-<th align="left">Sampling</th>
-<th align="right">QB_TP</th>
-<th align="right">QB_TN</th>
-<th align="right">QB_FP</th>
-<th align="right">QB_FN</th>
-<th align="right">WR_TP</th>
-<th align="right">WR_TN</th>
-<th align="right">WR_FP</th>
-<th align="right">WR_FN</th>
-<th align="right">RB_TP</th>
-<th align="right">RB_TN</th>
-<th align="right">RB_FP</th>
-<th align="right">RB_FN</th>
-<th align="right">Together_TP</th>
-<th align="right">Together_TN</th>
-<th align="right">Together_FP</th>
-<th align="right">Together_FN</th>
+<th></th>
+<th align="right">No Sampling</th>
+<th align="right">Oversampling</th>
+<th align="right">Undersampling</th>
+<th align="right">Rose Both</th>
+<th align="right">Smote</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">randomForest</td>
-<td align="left">no_sampling</td>
+<td>QB_TP</td>
 <td align="right">73</td>
+<td align="right">73</td>
+<td align="right">73</td>
+<td align="right">72</td>
+<td align="right">73</td>
+</tr>
+<tr class="even">
+<td>QB_TN</td>
 <td align="right">337</td>
+<td align="right">337</td>
+<td align="right">231</td>
+<td align="right">300</td>
+<td align="right">337</td>
+</tr>
+<tr class="odd">
+<td>QB_FP</td>
 <td align="right">0</td>
 <td align="right">0</td>
-<td align="right">161</td>
-<td align="right">1136</td>
-<td align="right">3</td>
 <td align="right">0</td>
-<td align="right">90</td>
-<td align="right">538</td>
-<td align="right">0</td>
-<td align="right">0</td>
-<td align="right">322</td>
-<td align="right">2011</td>
-<td align="right">5</td>
+<td align="right">1</td>
 <td align="right">0</td>
 </tr>
 <tr class="even">
-<td align="left">randomForest</td>
-<td align="left">oversampling</td>
-<td align="right">73</td>
-<td align="right">337</td>
+<td>QB_FN</td>
 <td align="right">0</td>
-<td align="right">0</td>
-<td align="right">164</td>
-<td align="right">1134</td>
-<td align="right">0</td>
-<td align="right">2</td>
-<td align="right">90</td>
-<td align="right">538</td>
-<td align="right">0</td>
-<td align="right">0</td>
-<td align="right">327</td>
-<td align="right">2010</td>
-<td align="right">0</td>
-<td align="right">1</td>
-</tr>
-<tr class="odd">
-<td align="left">randomForest</td>
-<td align="left">undersampling</td>
-<td align="right">73</td>
-<td align="right">231</td>
 <td align="right">0</td>
 <td align="right">106</td>
-<td align="right">163</td>
-<td align="right">986</td>
-<td align="right">1</td>
-<td align="right">150</td>
-<td align="right">90</td>
-<td align="right">434</td>
-<td align="right">0</td>
-<td align="right">104</td>
-<td align="right">326</td>
-<td align="right">1661</td>
-<td align="right">1</td>
-<td align="right">350</td>
-</tr>
-<tr class="even">
-<td align="left">randomForest</td>
-<td align="left">Rose_both</td>
-<td align="right">72</td>
-<td align="right">300</td>
-<td align="right">1</td>
 <td align="right">37</td>
-<td align="right">164</td>
-<td align="right">1066</td>
 <td align="right">0</td>
-<td align="right">70</td>
-<td align="right">89</td>
-<td align="right">501</td>
-<td align="right">1</td>
-<td align="right">37</td>
-<td align="right">325</td>
-<td align="right">1866</td>
-<td align="right">2</td>
-<td align="right">145</td>
 </tr>
 <tr class="odd">
-<td align="left">randomForest</td>
-<td align="left">Smote</td>
-<td align="right">73</td>
-<td align="right">337</td>
-<td align="right">0</td>
-<td align="right">0</td>
+<td>WR_TP</td>
+<td align="right">161</td>
+<td align="right">164</td>
+<td align="right">163</td>
+<td align="right">164</td>
 <td align="right">159</td>
+</tr>
+<tr class="even">
+<td>WR_TN</td>
 <td align="right">1136</td>
+<td align="right">1134</td>
+<td align="right">986</td>
+<td align="right">1066</td>
+<td align="right">1136</td>
+</tr>
+<tr class="odd">
+<td>WR_FP</td>
+<td align="right">3</td>
+<td align="right">0</td>
+<td align="right">1</td>
+<td align="right">0</td>
+<td align="right">5</td>
+</tr>
+<tr class="even">
+<td>WR_FN</td>
+<td align="right">0</td>
+<td align="right">2</td>
+<td align="right">150</td>
+<td align="right">70</td>
+<td align="right">0</td>
+</tr>
+<tr class="odd">
+<td>RB_TP</td>
+<td align="right">90</td>
+<td align="right">90</td>
+<td align="right">90</td>
+<td align="right">89</td>
+<td align="right">90</td>
+</tr>
+<tr class="even">
+<td>RB_TN</td>
+<td align="right">538</td>
+<td align="right">538</td>
+<td align="right">434</td>
+<td align="right">501</td>
+<td align="right">538</td>
+</tr>
+<tr class="odd">
+<td>RB_FP</td>
+<td align="right">0</td>
+<td align="right">0</td>
+<td align="right">0</td>
+<td align="right">1</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td>RB_FN</td>
+<td align="right">0</td>
+<td align="right">0</td>
+<td align="right">104</td>
+<td align="right">37</td>
+<td align="right">0</td>
+</tr>
+<tr class="odd">
+<td>Together_TP</td>
+<td align="right">322</td>
+<td align="right">327</td>
+<td align="right">326</td>
+<td align="right">325</td>
+<td align="right">323</td>
+</tr>
+<tr class="even">
+<td>Together_TN</td>
+<td align="right">2011</td>
+<td align="right">2010</td>
+<td align="right">1661</td>
+<td align="right">1866</td>
+<td align="right">2011</td>
+</tr>
+<tr class="odd">
+<td>Together_FP</td>
 <td align="right">5</td>
 <td align="right">0</td>
-<td align="right">90</td>
-<td align="right">538</td>
-<td align="right">0</td>
-<td align="right">0</td>
-<td align="right">323</td>
-<td align="right">2011</td>
+<td align="right">1</td>
+<td align="right">2</td>
 <td align="right">4</td>
+</tr>
+<tr class="even">
+<td>Together_FN</td>
+<td align="right">0</td>
+<td align="right">1</td>
+<td align="right">350</td>
+<td align="right">145</td>
 <td align="right">0</td>
 </tr>
 </tbody>
@@ -547,125 +563,141 @@ summary {
 <caption>testing data performance</caption>
 <thead>
 <tr class="header">
-<th align="left">Method</th>
-<th align="left">Sampling</th>
-<th align="right">QB_TP</th>
-<th align="right">QB_TN</th>
-<th align="right">QB_FP</th>
-<th align="right">QB_FN</th>
-<th align="right">WR_TP</th>
-<th align="right">WR_TN</th>
-<th align="right">WR_FP</th>
-<th align="right">WR_FN</th>
-<th align="right">RB_TP</th>
-<th align="right">RB_TN</th>
-<th align="right">RB_FP</th>
-<th align="right">RB_FN</th>
-<th align="right">Together_TP</th>
-<th align="right">Together_TN</th>
-<th align="right">Together_FP</th>
-<th align="right">Together_FN</th>
+<th></th>
+<th align="right">No Sampling</th>
+<th align="right">Oversampling</th>
+<th align="right">Undersampling</th>
+<th align="right">Rose Both</th>
+<th align="right">Smote</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">randomForest</td>
-<td align="left">no_sampling</td>
+<td>QB_TP</td>
 <td align="right">5</td>
+<td align="right">6</td>
+<td align="right">10</td>
+<td align="right">10</td>
+<td align="right">8</td>
+</tr>
+<tr class="even">
+<td>QB_TN</td>
 <td align="right">94</td>
-<td align="right">11</td>
-<td align="right">6</td>
-<td align="right">7</td>
-<td align="right">318</td>
-<td align="right">18</td>
-<td align="right">15</td>
-<td align="right">7</td>
-<td align="right">172</td>
-<td align="right">10</td>
-<td align="right">7</td>
-<td align="right">19</td>
-<td align="right">584</td>
-<td align="right">39</td>
-<td align="right">28</td>
-</tr>
-<tr class="even">
-<td align="left">randomForest</td>
-<td align="left">oversampling</td>
-<td align="right">6</td>
 <td align="right">90</td>
-<td align="right">15</td>
-<td align="right">5</td>
-<td align="right">13</td>
-<td align="right">304</td>
-<td align="right">32</td>
-<td align="right">9</td>
-<td align="right">8</td>
-<td align="right">163</td>
-<td align="right">19</td>
-<td align="right">6</td>
-<td align="right">27</td>
-<td align="right">566</td>
-<td align="right">57</td>
-<td align="right">20</td>
+<td align="right">65</td>
+<td align="right">79</td>
+<td align="right">86</td>
 </tr>
 <tr class="odd">
-<td align="left">randomForest</td>
-<td align="left">undersampling</td>
-<td align="right">10</td>
-<td align="right">65</td>
+<td>QB_FP</td>
+<td align="right">11</td>
+<td align="right">15</td>
 <td align="right">40</td>
-<td align="right">1</td>
+<td align="right">26</td>
 <td align="right">19</td>
-<td align="right">265</td>
-<td align="right">71</td>
-<td align="right">3</td>
-<td align="right">12</td>
-<td align="right">137</td>
-<td align="right">45</td>
-<td align="right">2</td>
-<td align="right">42</td>
-<td align="right">468</td>
-<td align="right">155</td>
-<td align="right">5</td>
 </tr>
 <tr class="even">
-<td align="left">randomForest</td>
-<td align="left">Rose_both</td>
-<td align="right">10</td>
-<td align="right">79</td>
-<td align="right">26</td>
-<td align="right">1</td>
-<td align="right">19</td>
-<td align="right">283</td>
-<td align="right">53</td>
-<td align="right">3</td>
-<td align="right">9</td>
-<td align="right">155</td>
-<td align="right">27</td>
+<td>QB_FN</td>
+<td align="right">6</td>
 <td align="right">5</td>
-<td align="right">37</td>
-<td align="right">511</td>
-<td align="right">112</td>
-<td align="right">10</td>
+<td align="right">1</td>
+<td align="right">1</td>
+<td align="right">3</td>
 </tr>
 <tr class="odd">
-<td align="left">randomForest</td>
-<td align="left">Smote</td>
-<td align="right">8</td>
-<td align="right">86</td>
+<td>WR_TP</td>
+<td align="right">7</td>
+<td align="right">13</td>
 <td align="right">19</td>
-<td align="right">3</td>
+<td align="right">19</td>
 <td align="right">16</td>
+</tr>
+<tr class="even">
+<td>WR_TN</td>
+<td align="right">318</td>
+<td align="right">304</td>
+<td align="right">265</td>
+<td align="right">283</td>
 <td align="right">289</td>
+</tr>
+<tr class="odd">
+<td>WR_FP</td>
+<td align="right">18</td>
+<td align="right">32</td>
+<td align="right">71</td>
+<td align="right">53</td>
 <td align="right">47</td>
+</tr>
+<tr class="even">
+<td>WR_FN</td>
+<td align="right">15</td>
+<td align="right">9</td>
+<td align="right">3</td>
+<td align="right">3</td>
 <td align="right">6</td>
+</tr>
+<tr class="odd">
+<td>RB_TP</td>
+<td align="right">7</td>
+<td align="right">8</td>
+<td align="right">12</td>
+<td align="right">9</td>
 <td align="right">10</td>
+</tr>
+<tr class="even">
+<td>RB_TN</td>
+<td align="right">172</td>
+<td align="right">163</td>
+<td align="right">137</td>
 <td align="right">155</td>
+<td align="right">155</td>
+</tr>
+<tr class="odd">
+<td>RB_FP</td>
+<td align="right">10</td>
+<td align="right">19</td>
+<td align="right">45</td>
 <td align="right">27</td>
+<td align="right">27</td>
+</tr>
+<tr class="even">
+<td>RB_FN</td>
+<td align="right">7</td>
+<td align="right">6</td>
+<td align="right">2</td>
+<td align="right">5</td>
 <td align="right">4</td>
+</tr>
+<tr class="odd">
+<td>Together_TP</td>
+<td align="right">19</td>
+<td align="right">27</td>
+<td align="right">42</td>
+<td align="right">37</td>
 <td align="right">33</td>
+</tr>
+<tr class="even">
+<td>Together_TN</td>
+<td align="right">584</td>
+<td align="right">566</td>
+<td align="right">468</td>
+<td align="right">511</td>
 <td align="right">532</td>
+</tr>
+<tr class="odd">
+<td>Together_FP</td>
+<td align="right">39</td>
+<td align="right">57</td>
+<td align="right">155</td>
+<td align="right">112</td>
 <td align="right">91</td>
+</tr>
+<tr class="even">
+<td>Together_FN</td>
+<td align="right">28</td>
+<td align="right">20</td>
+<td align="right">5</td>
+<td align="right">10</td>
 <td align="right">14</td>
 </tr>
 </tbody>
